# fastapi-azure-project

./: .gitignore  Dockerfile  README.md  architecture.md  azure-pipelines.yml  docker-compose.yaml
.github/workflows/: deploy.yml  destroy-infrastructure.yml
app/: Dockerfile  main.py  models.py  pyproject.toml
frontend/: Dockerfile  nginx.conf.template
frontend/src/: App.jsx
infra/: main.tf  variables.tf
scripts/: setup_tf_state.sh
